4.3-18697 better sp migration logs (#26282)
* distupgrade better logging